[package]
name = "rust-finance"
version = "0.1.0"
authors = ["Troy <troyparsons@hotmail.com>"]
edition = "2021"
build = "build.rs"
description = "Desktop app to calculate weightbased values for budgeting your salary."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
financial = "1.1.5"
slint = "1.3"
thousands = "0.2.0"

[build-dependencies]
slint-build = "1.3"

[package.metadata.bundle]
name = "Rusty Budget Calc"
identifier = "io.github.parsTroy.rust-finance"
icon = ["./icon.png", "./icon@2x.png"]
